--- a/themes/TAMU/templates/header.phtml
+++ b/themes/TAMU/templates/header.phtml
@@ -111,8 +111,8 @@
 
 if (
 
-(strpos($_SERVER['SCRIPT_NAME'], 'Alphabrowse') === false) &&
-(strpos($_SERVER['SCRIPT_NAME'], 'search/reserves') === false) &&
+(strpos($_SERVER['REDIRECT_URL'], 'Alphabrowse') > 0) &&
+(strpos($_SERVER['REDIRECT_URL'], 'search/reserves') > 0) &&
 ($this->layout()->searchbox !== false)
 
 ):
