Pass "save to history" flag to the AJAX handler.

--- a/themes/bootstrap3/templates/search/results-list.phtml
+++ b/themes/bootstrap3/templates/search/results-list.phtml
@@ -17,6 +17,7 @@
     } else {
       $this->resultsAttrs = $this->htmlAttributes(['data-backend' => $searchClass,]);
     }
+    $this->resultsAttrs->add('data-history', $this->saveToHistory ? '1' : '0');
   }
 ?>
 <?=$this->render('search/list-' . $this->params->getView() . '.phtml')?>
