Fix scrolling to selected node in collection page.

--- a/themes/bootstrap3/templates/RecordTab/collectionhierarchytree.phtml
+++ b/themes/bootstrap3/templates/RecordTab/collectionhierarchytree.phtml
@@ -1,4 +1,7 @@
-<?php $this->treeContext = 'Collection'; ?>
+<?php
+  $this->treeContext = 'Collection';
+  $this->treePreviewElement = '#tree-preview';
+?>
 
 <div class="collection-hierarchytree">
   <div class="tree-panel">
