--- a/themes/bootstrap3/templates/search/results.phtml
+++ b/themes/bootstrap3/templates/search/results.phtml
@@ -35,6 +35,7 @@
       [
           'displayVersions' => !empty($options->getVersionsAction()),
           'listViewOption' => $options->getListViewOption(),
+          'jsResults' => $options->loadResultsWithJsEnabled(),
       ]
   );
 ?>
