adding missing call to get user access

--- a/themes/bootstrap3/templates/RecordTab/overdriveholdings.phtml
+++ b/themes/bootstrap3/templates/RecordTab/overdriveholdings.phtml
@@ -1,3 +1,4 @@
+<?php $access = $this->driver->getOverdriveAccess();?>
 <?php if ($access->code == 'od_account_noaccess'): ?>
   <div class="hold">
     <div class="alert alert-warning">
