--- a/themes/bootstrap3/templates/search/controls/limit.phtml
+++ b/themes/bootstrap3/templates/search/controls/limit.phtml
@@ -4,7 +4,7 @@
     echo $this->component(
         'menu-button',
         [
-          'wrapperClass' => 'search__limit',
+          'wrapperClass' => 'search__limit js-search-limit',
           'showSelectedValue' => true,
           'defaultSelectedValue' => $this->params->getLimit(),
           'toggleLabel' => 'Results per page',
