--- a/themes/bootstrap3/templates/search/controls/sort.phtml
+++ b/themes/bootstrap3/templates/search/controls/sort.phtml
@@ -4,7 +4,7 @@
     echo $this->component(
         'menu-button',
         [
-          'wrapperClass' => 'search__sort',
+          'wrapperClass' => 'search__sort js-search-sort',
           'showSelectedValue' => true,
           'toggleLabel' => 'Sort',
           'menuItems' => array_map(
