--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -102,6 +102,8 @@ header .container.navbar { margin-bottom: 0; }
     display: flex;
   }
   .search-controls {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     display: flex;
     flex-direction: column;
     gap: 2px;
