Fix empty label and white-space decoration issue in search history.

--- a/themes/bootstrap3/templates/_ui/components/menu-button.phtml
+++ b/themes/bootstrap3/templates/_ui/components/menu-button.phtml
@@ -57,7 +57,7 @@
     $label = empty($this->toggleLabel) ? '' : $this->transEsc($this->toggleLabel);
     $buttonText = $showSelectedValue ? $selected : $label;
   ?>
-  <?php if ($showSelectedValue): ?>
+  <?php if ($showSelectedValue && '' !== $label): ?>
     <label for="<?=$this->escapeHtmlAttr($toggleAttrs['id'])?>"><?=$this->escapeHtml($label)?></label>
   <?php endif; ?>
   <?=
