Fix Mink tests.

--- a/themes/bootstrap3/templates/_ui/components/menu-button.phtml
+++ b/themes/bootstrap3/templates/_ui/components/menu-button.phtml
@@ -41,10 +41,10 @@
           $extraClasses = '';
         }
       ?>
-      <li class="dropdown__item<?=$extraClasses?>">
+      <li class="dropdown__item-container<?=$extraClasses?>">
         <?php
           $extra = $current['extraLinkAttributes'] ?? [];
-          $standard = ['class' => 'dropdown__link', 'href' => $current['url'], 'rel' => 'nofollow'];
+          $standard = ['class' => 'dropdown-item', 'href' => $current['url'], 'rel' => 'nofollow'];
           $linkAttributes = array_merge($extra, $standard);
         ?>
         <a<?=$this->htmlAttributes($linkAttributes)?>>
