--- a/themes/bootstrap3/templates/librarycards/selectcard.phtml
+++ b/themes/bootstrap3/templates/librarycards/selectcard.phtml
@@ -5,6 +5,7 @@
       $this->component(
           'menu-button',
           [
+            'wrapperClass' => 'select-library-card',
             'showSelectedValue' => true,
             'toggleLabel' => 'Library Card',
             'menuItems' => array_merge(
