--- a/themes/bootstrap3/templates/myresearch/controls/sort.phtml
+++ b/themes/bootstrap3/templates/myresearch/controls/sort.phtml
@@ -4,6 +4,7 @@
       echo $this->component(
           'menu-button',
           [
+            'wrapperClass' => 'list__sort',
             'showSelectedValue' => true,
             'toggleLabel' => 'Sort',
             'menuItems' => array_map(
