--- a/themes/bootstrap3/templates/cart/cart.phtml
+++ b/themes/bootstrap3/templates/cart/cart.phtml
@@ -26,7 +26,7 @@
                 'user-list-add',
                 'Save',
                 [
-                  'title' => $this->translate('bookbag_save'),
+                  'title' => $this->translate('bulk_save_cart'),
                 ]
             )
           ?>
@@ -37,7 +37,7 @@
               'send-email',
               'Email',
               [
-                'title' => $this->translate('bookbag_email'),
+                'title' => $this->translate('bulk_email_cart'),
               ]
           )
         ?>
@@ -49,7 +49,7 @@
                 'export',
                 'Export',
                 [
-                  'title' => $this->translate('bookbag_export'),
+                  'title' => $this->translate('bulk_export_cart'),
                 ]
             )
           ?>
@@ -60,7 +60,7 @@
               'print',
               'Print',
               [
-                'title' => $this->translate('print_selected'),
+                'title' => $this->translate('bulk_print_cart'),
               ]
           )
         ?>
