--- a/themes/bootstrap3/templates/search/bulk-action-buttons.phtml
+++ b/themes/bootstrap3/templates/search/bulk-action-buttons.phtml
@@ -17,7 +17,7 @@
               array_merge(
                   [
                     'id' => $this->idPrefix . 'ribbon-email',
-                    'title' => $this->translate('bookbag_email_selected'),
+                    'title' => $this->translate('bulk_email_search'),
                   ],
                   $this->formAttr ? ['form' => $this->formAttr] : []
               )
@@ -33,7 +33,7 @@
                 array_merge(
                     [
                       'id' => $this->idPrefix . 'ribbon-export',
-                      'title' => $this->translate('bookbag_export_selected'),
+                      'title' => $this->translate('bulk_export_search'),
                     ],
                     $this->formAttr ? ['form' => $this->formAttr] : []
                 )
@@ -48,7 +48,7 @@
               array_merge(
                   [
                     'id' => $this->idPrefix . 'ribbon-print',
-                    'title' => $this->translate('bookbag_print_selected'),
+                    'title' => $this->translate('bulk_print_search'),
                   ],
                   $this->formAttr ? ['form' => $this->formAttr] : []
               )
@@ -63,7 +63,7 @@
                 array_merge(
                     [
                       'id' => $this->idPrefix . 'ribbon-save',
-                      'title' => $this->translate('bookbag_save_selected'),
+                      'title' => $this->translate('bulk_save_search'),
                     ],
                     $this->formAttr ? ['form' => $this->formAttr] : []
                 )
