--- a/themes/bootstrap3/templates/cart/email.phtml
+++ b/themes/bootstrap3/templates/cart/email.phtml
@@ -7,7 +7,7 @@
     . '<li><a href="' . $this->url('cart-home') . '">' . $this->transEsc('Cart') . '</a></li> '
     . '<li class="active">' . $this->transEsc('email_selected_favorites') . '</li>';
 ?>
-<h2><?=$this->transEsc('bookbag_email_selected') ?></h2>
+<h2><?=$this->transEsc('bulk_email_cart') ?></h2>
 <?=$this->flashmessages()?>
 <?php if (count($this->records) > 0): ?>
   <form class="form-cart-email" action="<?=$this->url('cart-email')?>" method="post"  name="bulkEmail">
