fix: load carousels submodule where we need it.

--- a/themes/bootstrap3/templates/RecordTab/similaritemscarousel.phtml
+++ b/themes/bootstrap3/templates/RecordTab/similaritemscarousel.phtml
@@ -1,7 +1,8 @@
 <?php
   // Add carousel library for Similar Items
-  $this->headScript()->appendFile('vendor/splide.min.js');
   $this->headLink()->appendStylesheet('vendor/splide.min.css');
+  $this->headScript()->appendFile('vendor/splide.min.js');
+  $this->headScript()->appendFile('carousels.js');
 ?>
 
 <h2><?=$this->transEsc('Similar Items')?></h2>
