--- a/themes/bootstrap3/templates/channels/channelList.phtml
+++ b/themes/bootstrap3/templates/channels/channelList.phtml
@@ -1,6 +1,7 @@
 <?php
   $this->headLink()->appendStylesheet('vendor/splide.min.css');
   $this->headScript()->appendFile('vendor/splide.min.js');
+  $this->headScript()->appendFile('carousels.js');
   $this->headScript()->appendFile('channels.js');
   $this->jsTranslations()->addStrings([
     'channel_browse' => 'channel_browse',
