added questionmark for field description

--- a/themes/bootstrap3/less/components/explain.less
+++ b/themes/bootstrap3/less/components/explain.less
@@ -46,6 +46,12 @@
 
   .field-name {
     font-weight: bold;
+
+    .icon {
+      padding-left: 1px;
+      color: darkblue;
+      vertical-align: unset;
+    }
   }
 
   .exact-match {
