--- a/themes/bootstrap3/templates/RecordDriver/DefaultRecord/explain-line.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/DefaultRecord/explain-line.phtml
@@ -20,7 +20,9 @@
       }
       $exactMatchClass = ($exactMatch ?? 'unknown') . '-match';
       echo '<span class="' . $exactMatchClass . '">"' . $this->escapeHtml($value) . '"</span> ' . $this->transEsc('in');
-      echo ' <span class="field-name" title="' . $this->escapeHtmlAttr($description) . '">' . $this->escapeHtml($name) . '</span>';
+      echo ' <span class="field-name" title="' . $this->escapeHtmlAttr($description) . '">';
+      echo  $this->escapeHtml($name) . (!empty($description) ? $this->icon('question-circle') : '');
+      echo '</span>';
       echo ($i < count($fieldName) - 1) ? ', ' : '';
     }
 
