--- a/themes/bootstrap3/scss/components/explain.scss
+++ b/themes/bootstrap3/scss/components/explain.scss
@@ -46,6 +46,12 @@
 
   .field-name {
     font-weight: bold;
+
+    .icon {
+      padding-left: 1px;
+      color: darkblue;
+      vertical-align: unset;
+    }
   }
 
   .exact-match {
