Separate advanced search X button from lightbox close button.

--- a/themes/bootstrap3/less/components/advanced-search.less
+++ b/themes/bootstrap3/less/components/advanced-search.less
@@ -38,7 +38,8 @@
   max-width: 80%;
 }
 .adv-term-remove {
-  &:extend(.close); // borrow the X from bootstrap close
+  color: #000;
+  font-size: 1.2rem;
   float: left;
   width: 20%;
   height: 30px;
