Refactor hierarchy tree to an HTML-based one. (#3277)
- Removes dependency on JSTree and remnants of it from the codebase.
- Removes the defunct XML file support.
- Adds all expected methods to the abstract base classes.
- Retains the pluggable system for now.

--- a/themes/bootstrap3/less/bootstrap.less
+++ b/themes/bootstrap3/less/bootstrap.less
@@ -34,7 +34,6 @@ $fa-font-path: "../../bootstrap3/css/fonts";
 @import "components/explain";
 @import "components/form";
 @import "components/icons";
-@import "components/js-tree";
 @import "components/keyboard";
 @import "components/lightbox";
 @import "components/offcanvas";
@@ -43,6 +42,7 @@ $fa-font-path: "../../bootstrap3/css/fonts";
 @import "components/sidebar";
 @import "components/similar-carousel";
 @import "components/sliders";
+@import "components/trees";
 
 /**
  * Notes
