--- a/themes/bootstrap3/scss/bootstrap.scss
+++ b/themes/bootstrap3/scss/bootstrap.scss
@@ -34,7 +34,6 @@ $fa-font-path: "../../bootstrap3/css/fonts";
 @import "components/explain";
 @import "components/form";
 @import "components/icons";
-@import "components/js-tree";
 @import "components/keyboard";
 @import "components/lightbox";
 @import "components/offcanvas";
@@ -43,6 +42,7 @@ $fa-font-path: "../../bootstrap3/css/fonts";
 @import "components/sidebar";
 @import "components/similar-carousel";
 @import "components/sliders";
+@import "components/trees";
 
 /**
  * Notes
