--- a/themes/bootstrap3/templates/myresearch/profile.phtml
+++ b/themes/bootstrap3/templates/myresearch/profile.phtml
@@ -93,7 +93,7 @@
     <?php if (count($tokens) === 0): ?>
       <div class="my-profile-col"><?=$this->transEsc('No saved logins')?></div>
     <?php else: ?>
-      <table class="login-tokens-table table table-striped">
+      <table class="login-tokens-table table table-responsive table-striped">
         <thead>
           <tr>
             <th scope="col" class="login_token_browser"> <?=$this->transEsc('saved_login_platform_and_browser')?></th>
@@ -104,15 +104,15 @@
         <tbody>
           <?php foreach ($tokens as $i => $token): ?>
             <tr>
-              <th scope="col" id="login_platform_<?=$i?>"><?=$this->transEsc($token->platform)?> / <?=$this->transEsc($token->browser)?></th>
-              <th scope="col" id="login_date_<?=$i?>"><?=$this->dateTime()->convertToDisplayDateAndTime('Y-m-d H:i:s', $token->last_login)?></th>
-              <th scope="col">
+              <td data-label="<?=$this->transEsc('saved_login_platform_and_browser')?>" id="login_platform_<?=$i?>"><?=$this->transEsc($token->platform)?> / <?=$this->transEsc($token->browser)?></td>
+              <td data-label="<?=$this->transEsc('Last Login')?>" id="login_date_<?=$i?>"><?=$this->dateTime()->convertToDisplayDateAndTime('Y-m-d H:i:s', $token->last_login)?></td>
+              <td data-label="<?=$this->transEsc('saved_login_actions')?>">
                 <form id="delete-login-token" method="post" action="<?=$this->url('myresearch-deletelogintoken')?>">
                   <input type="hidden" name="csrf" value="<?=$this->escapeHtmlAttr($this->auth()->getManager()->getCsrfHash())?>">
                   <input type="hidden" name="series" value="<?=$this->escapeHtmlAttr($token->series)?>">
                   <input id="delete-login-token-submit" class="btn btn-danger" type="submit" name="submit" value="<?=$this->transEscAttr('Forget Login'); ?>" aria-labelledby="delete-login-token-submit login_platform_<?=$i?> login_date_<?=$i?>">
                 </form>
-              </th>
+              </td>
             </tr>
           <?php endforeach; ?>
         </tbody>
