--- a/themes/sandal/less/search.less
+++ b/themes/sandal/less/search.less
@@ -162,7 +162,7 @@
   }
   @media (min-width: 768px) {
     height: 300px;
-    padding: 7rem calc(50vw - 50% + .5rem); // Align searchbox with container
+    padding: 7rem calc(50vw - 50%); // Align searchbox with container
   }
 }
 .searchHomeContent::after {
@@ -189,9 +189,6 @@
 
 .search { border: 0; }
 #searchForm {
-  padding-top: .5rem;
-  padding-bottom: calc(@search-tab-height + 1.5rem);
-
   .keyboard-selection {
     bottom: 2px;
 
@@ -224,17 +221,19 @@
   color: @input-color;
 }
 
+.navbar-form {
+  padding: .5rem 0 1rem 0;
+  margin: 0;
+}
+
 .nav.searchbox,
 #searchForm {
   position: relative;
   width: 100%;
 
   .nav-tabs {
-    position: absolute;
-    bottom: 0;
-    margin-top: .5rem;
-    border: 0;
     white-space: nowrap;
+    margin-bottom: 1rem;
   }
   .nav-tabs > li {
     float: none;
@@ -265,7 +264,6 @@
 @media (min-width: 768px) {
   #searchForm_lookfor,
   #searchForm_type { margin-bottom: 0; }
-  #searchForm { padding-bottom: @search-tab-height; }
   .nav.searchbox .nav-tabs a,
   #searchForm .nav-tabs a {
     height: @search-tab-height;
@@ -279,7 +277,6 @@
 .solr-adv-facet:last-child { padding-right: 0; }
 .adv_search_links { margin-bottom: 0; }
 .adv_search_links a { text-decoration: underline; }
-.tab-content .adv_search_links { margin-bottom: 1.5rem; } // Advanced links with search tabs
 
 /* ------ Combined ------ */
 #content > [name="bulkActionForm"] .bulkActionButtons {
