Fix alignment of graphical advanced search delete icons. (#3321)

--- a/themes/bootstrap3/scss/components/advanced-search.scss
+++ b/themes/bootstrap3/scss/components/advanced-search.scss
@@ -46,6 +46,9 @@
   line-height: 1.7;
   text-align: center;
   opacity: .4;
+  .icon--image {
+    vertical-align: middle;
+  }
 }
 .adv-submit { @include clearfix(); }
 .adv-submit .clear-btn { float: right; }
