--- a/themes/bootstrap3/scss/bootstrap.scss
+++ b/themes/bootstrap3/scss/bootstrap.scss
@@ -119,7 +119,7 @@ label { cursor: pointer; }
 .navbar-nav button.dropdown-toggle {
   @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
   appearance: none;
-  padding: 15px;
+  padding: $navbar-padding-vertical;
   border: 0;
   color: inherit;
   background-color: transparent;
