--- a/themes/sandal/scss/variables.scss
+++ b/themes/sandal/scss/variables.scss
@@ -9,6 +9,8 @@ $result-checkbox-width: 28px;
 $result-checkbox-height: 80px;
 $result-sm-icon-size: 1.5rem;
 
+$font-size-base: 16px;
+
 /* ------ Mixins ------ */
 @mixin full-width(){ // Break out of the container
   margin-right: calc(50% - 50vw + .5rem); // .5rem seems to be the margin of error in Chrome
