--- a/themes/sandal/scss/search.scss
+++ b/themes/sandal/scss/search.scss
@@ -35,13 +35,12 @@
   .callnumAndLocation {
     margin-top: .25rem;
     margin-bottom: .25rem;
-    font-size: 12px;
+    font-size: $reduced-font-size;
   }
   .format,
   .label {
     display: inline-block;
     padding: 4px .75rem;
-    font-size: 11px;
   }
   .savedLists {
     margin-bottom: 0;
@@ -94,6 +93,7 @@
 .result-links {
   width: 15%;
   text-align: center;
+  font-size: $reduced-font-size;
 }
 @media (max-width: 767px) {
   .result-link-icon,
@@ -169,7 +169,7 @@
   width: 100%;
   padding: .25rem .5rem;
   padding-left: 1rem;
-  font-size: 10px;
+  font-size: ceil(($reduced-font-size * .65)); // ~10px
   color: #fff;
   background-color: rgba(0,0,0,.3);
   content: "Photo by Paul Gilmore on Unsplash";
