--- a/themes/sandal/scss/variables.scss
+++ b/themes/sandal/scss/variables.scss
@@ -1,4 +1,3 @@
-$reduced-font-size: 14px;
 $img-path: "../../sandal/images/";
 
 $banner-height: 60px;
@@ -10,6 +9,8 @@ $result-checkbox-height: 80px;
 $result-sm-icon-size: 1.5rem;
 
 $font-size-base: 16px;
+
+$reduced-font-size: ($font-size-base - 2);
 
 /* ------ Mixins ------ */
 @mixin full-width(){ // Break out of the container
