Revert result-links change, add min-font-size.

--- a/themes/sandal/less/variables.less
+++ b/themes/sandal/less/variables.less
@@ -11,6 +11,7 @@
 @font-size-base: 16px;
 
 @reduced-font-size: (@font-size-base - 2);
+@min-font-size: (@font-size-base - 6);
 
 /* ------ Mixins ------ */
 .full-width() { // Break out of the container
