--- a/themes/sandal/scss/variables.scss
+++ b/themes/sandal/scss/variables.scss
@@ -11,6 +11,7 @@ $result-sm-icon-size: 1.5rem;
 $font-size-base: 16px;
 
 $reduced-font-size: ($font-size-base - 2);
+$min-font-size: ($font-size-base - 6);
 
 /* ------ Mixins ------ */
 @mixin full-width(){ // Break out of the container
