--- a/themes/sandal/less/variables.less
+++ b/themes/sandal/less/variables.less
@@ -13,6 +13,9 @@
 @reduced-font-size: (@font-size-base - 2);
 @min-font-size: (@font-size-base - 6);
 
+// Increase input height to accommodate 16px font (affect at least Chrome on Windows):
+@input-height-base: 38px;
+
 /* ------ Mixins ------ */
 .full-width() { // Break out of the container
   margin-right: ~"calc(50% - 50vw + .5rem)"; // .5rem seems to be the margin of error in Chrome
