--- a/themes/sandal/scss/variables.scss
+++ b/themes/sandal/scss/variables.scss
@@ -13,6 +13,9 @@ $font-size-base: 16px;
 $reduced-font-size: ($font-size-base - 2);
 $min-font-size: ($font-size-base - 6);
 
+// Increase input height to accommodate 16px font (affect at least Chrome on Windows):
+$input-height-base: 38px;
+
 /* ------ Mixins ------ */
 @mixin full-width(){ // Break out of the container
   margin-right: calc(50% - 50vw + .5rem); // .5rem seems to be the margin of error in Chrome
