Adjust line-height-base instead of input height.

--- a/themes/sandal/less/variables.less
+++ b/themes/sandal/less/variables.less
@@ -13,8 +13,8 @@
 @reduced-font-size: (@font-size-base - 2);
 @min-font-size: (@font-size-base - 6);
 
-// Increase input height to accommodate 16px font (affect at least Chrome on Windows):
-@input-height-base: 38px;
+// Increase base line height to accommodate 16px font (affect at least Chrome on Windows):
+@line-height-base: 1.5;
 
 /* ------ Mixins ------ */
 .full-width() { // Break out of the container
