Hide account dropdown in mobile menu.

--- a/themes/bootstrap3/templates/header.phtml
+++ b/themes/bootstrap3/templates/header.phtml
@@ -40,7 +40,7 @@
                 </a>
               </li>
               <?php if ($account->dropdownEnabled()): ?>
-                <li id="login-dropdown" class="dropdown">
+                <li id="login-dropdown" class="dropdown hidden-xs">
                   <a href="#" data-toggle="dropdown"><?=$this->icon('dropdown-caret') ?></a>
                   <div class="dropdown-menu">
                     <?=$this->render('myresearch/menu'); ?>
