--- a/themes/bootstrap3/templates/header.phtml
+++ b/themes/bootstrap3/templates/header.phtml
@@ -73,6 +73,7 @@
           <?php if (isset($this->layout()->themeOptions) && count($this->layout()->themeOptions) > 1): ?>
               <?=$this->component('menu-button', [
                   'toggleLabel' => 'Theme',
+                  'wrapperClass' => 'theme-selector',
                   'wrapperTag' => 'li',
                   'menuItems' => array_map(
                       function ($item) {
