--- a/themes/sandal/less/sandal.less
+++ b/themes/sandal/less/sandal.less
@@ -12,7 +12,7 @@
 @import "rtl";
 
 html {
-  font-size: 16px;
+  font-size: @font-size-base;
   overflow-x: hidden;
 }
 body {
@@ -52,8 +52,6 @@ body {
 
 header {
   background-color: @header-bg;
-  font-size: @reduced-font-size;
-  font-weight: 500;
   color: @white;
 
   .navbar-nav { margin-top: 0; }
@@ -179,7 +177,6 @@ a:hover .login-dropdown-caret {
   margin-top: 1rem;
   margin-right: auto;
 }
-.info-col { font-size: @reduced-font-size; }
 .info-col h3 {
   margin-top: 0;
   font-weight: 500;
