--- a/themes/sandal/scss/common.scss
+++ b/themes/sandal/scss/common.scss
@@ -12,15 +12,13 @@ $border-radius-large: 0; // modal
 
 .highlight,
 mark { background-color: $highlighter-color; }
-table { font-size: $reduced-font-size; }
 
 /* ------ Bootstrap class overrides ------ */
 .badge {
   margin-bottom: 1px;
-  font-size: 10px;
+  font-size: $min-font-size;
 }
 .btn {
-  height: 34px;
   border-radius: .25rem;
   border-color: $silver;
 }
@@ -118,7 +116,7 @@ $pagination-hover-border: transparent;
 .pagination > li > span {
   padding-left: 1rem;
   padding-right: 1rem;
-  font-size: 13px;
+  font-size: $reduced-font-size;
   font-weight: 500;
   line-height: 1rem;
 
