fix some issues with magazine support and editing hold suspensions

--- a/themes/bootstrap3/templates/RecordTab/overdriveholdings.phtml
+++ b/themes/bootstrap3/templates/RecordTab/overdriveholdings.phtml
@@ -14,10 +14,11 @@
   $rec_id = $this->driver->getUniqueID();
   $hold_url = $this->url('overdrive-hold');
   $avail = $this->driver->getOverdriveAvailability();
+  
   $checkedOutResult = $this->driver->isCheckedOut();
   $checkedOut = $checkedOutResult->data;
   if (!$checkedOut):
-    $hold = $this->driver->isHeld($user);
+    $hold = $this->driver->isHeld();
   endif; ?>
 
   <div class="internetDetails">
@@ -77,12 +78,11 @@
       if ($checkedOut):
         foreach ($checkedOut as $title): ?>
           <div class="panel panel-info">
-            <?php
-            if ($checkedOutResult->isMagazine):
+            <?php if ($checkedOutResult->isMagazine):
               $od_id = $title->reserveId; ?>
               <div class="panel-heading">
                 <h3 class="panel-title">
-                  <?= $title->metadata->edition ?>
+                  <?=$this->translate('Issue').": ".$title->metadata->edition ?>
                 </h3>
               </div>
             <?php endif; ?>
