--- a/themes/bootstrap3/templates/myresearch/odmycontent.phtml
+++ b/themes/bootstrap3/templates/myresearch/odmycontent.phtml
@@ -8,13 +8,16 @@
 
 <div class="<?=$this->layoutClass('mainbody')?>">
   <h2>
-      <div class="odbrand pull-left">
-          <img class="media-left" src="https://developerportaldev.blob.core.windows.net/media/Default/images/newLogos/OverDrive_Logo_28x28_rgb.jpg">
-      </div>
-      <?=$this->transEsc('od_content')?></h2>
-  <p class="od_help"><?=$this->icon('overdrive-help') ?>
-    <?=$this->translate('od_mycontent_help', ['%%url%%' => $this->config()->get('Overdrive')->Overdrive->ODHelpLink]); ?></p>
-
+    <div class="odbrand pull-left">
+        <img class="media-left" src="https://developerportaldev.blob.core.windows.net/media/Default/images/newLogos/OverDrive_Logo_28x28_rgb.jpg">
+    </div>
+    <?=$this->transEsc('od_content')?>
+  </h2>
+  <?php if ($this->config()->get('Overdrive')->Overdrive->ODHelpLink): ?>
+    <p class="od_help"><?=$this->icon('overdrive-help') ?>
+      <?=$this->translate('od_mycontent_help', ['%%url%%' => $this->config()->get('Overdrive')->Overdrive->ODHelpLink]); ?></p>
+  <?php endif;?>
+      
   <?=$this->flashmessages()?>
 
   <h3><?=$this->transEsc('od_loans')?></h3>
