formatting fixes pt 3

--- a/themes/bootstrap3/templates/RecordTab/overdriveholdings.phtml
+++ b/themes/bootstrap3/templates/RecordTab/overdriveholdings.phtml
@@ -81,7 +81,7 @@
               $od_id = $title->reserveId; ?>
               <div class="panel-heading">
                 <h3 class="panel-title">
-                  <?=$this->translate('Issue') . ": " . $title->metadata->edition ?>
+                  <?=$this->translate('Issue') . ': ' . $title->metadata->edition ?>
                 </h3>
               </div>
             <?php endif; ?>
