--- a/themes/bootstrap3/templates/layout/layout.phtml
+++ b/themes/bootstrap3/templates/layout/layout.phtml
@@ -139,10 +139,10 @@
       <a class="sr-only" href="#content"><?=$this->transEsc('Skip to content') ?></a>
       <?=$this->render('header.phtml')?>
     </header>
-    <?php if ($this->layout()->showBreadcrumbs ?? true): ?>
+    <?php if($this->layout()->showBreadcrumbs ?? true && $this->layout()->breadcrumbs !== false): ?>
       <nav class="breadcrumbs" aria-label="<?=$this->transEscAttr('Breadcrumbs') ?>">
         <div class="container">
-            <ul class="breadcrumb hidden-print"><?=$this->layout()->breadcrumbs ?></ul>
+          <ul class="breadcrumb hidden-print"><?=$this->layout()->breadcrumbs ?></ul>
         </div>
       </nav>
     <?php endif; ?>
