Tweak hierarchy tree tab a bit.
- If record preview isn't available, follow the links to records.
- Add a class to the tree selector to make it possible to hide it when there's only a single tree.

--- a/themes/bootstrap3/templates/RecordTab/hierarchytree.phtml
+++ b/themes/bootstrap3/templates/RecordTab/hierarchytree.phtml
@@ -6,7 +6,7 @@
 ?>
 <div class="hierarchy-tree-container js-hierarchy-tree-container">
   <?php if (count($hierarchyTreeList) > 0): ?>
-    <div class="hierarchy-tree-selector">
+    <div class="hierarchy-tree-selector<?=count($hierarchyTreeList) === 1 ? ' hierarchy-tree-selector__single' : ''?>">
       <?php foreach ($hierarchyTreeList as $hierarchy => $hierarchyTitle): ?>
         <?php if ($activeTree == $hierarchy): ?>
           <?=$this->icon('hierarchy-tree') ?>
